WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161929
Promises aren't resolved properly when making a ObjC API callback
https://bugs.webkit.org/show_bug.cgi?id=161929
Summary
Promises aren't resolved properly when making a ObjC API callback
Michael Saboff
Reported
2016-09-13 14:51:12 PDT
If a promise is resolved or rejected and the resolution handler is queue but hasn't been processed when an ObjC function callback is invoked, the promise resolution internal builtins may not compile properly.
Attachments
Patch
(4.86 KB, patch)
2016-09-13 15:17 PDT
,
Michael Saboff
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2016-09-13 14:51:38 PDT
rdar://problem/27992169
Michael Saboff
Comment 2
2016-09-13 15:17:10 PDT
Created
attachment 288735
[details]
Patch
Geoffrey Garen
Comment 3
2016-09-13 15:21:42 PDT
Comment on
attachment 288735
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=288735&action=review
r=me It occurs to me that it is also a bug that we drain the micro task queue at all when calling out to ObjC. That should only happen when we exit the VM.
> Source/JavaScriptCore/ChangeLog:3 > + Promises aren't resolved properly when making a ObcC API callback
ObjC
> Source/JavaScriptCore/ChangeLog:8 > + When we go to call out to an Objective C functions registered via the API,
function
Michael Saboff
Comment 4
2016-09-13 19:30:37 PDT
(In reply to
comment #3
)
> Comment on
attachment 288735
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=288735&action=review
> > r=me > > It occurs to me that it is also a bug that we drain the micro task queue at > all when calling out to ObjC. That should only happen when we exit the VM.
I filed
https://bugs.webkit.org/show_bug.cgi?id=161942
to track this.
> > Source/JavaScriptCore/ChangeLog:3 > > + Promises aren't resolved properly when making a ObcC API callback > > ObjC
Fixed.
> > Source/JavaScriptCore/ChangeLog:8 > > + When we go to call out to an Objective C functions registered via the API, > > function
Fixed.
Michael Saboff
Comment 5
2016-09-13 19:31:28 PDT
Committed
r205895
: <
http://trac.webkit.org/changeset/205895
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug